CloudFormation.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Creates a load balanced website/webserver, with autoscaling policy",
    "Parameters": {
        "InstanceType": {
            "Description": "WebServer EC2 instance type",
            "Type": "String",
            "Default": "t2.small",
            "AllowedValues": [ "t1.micro", "t2.nano", "t2.micro", "t2.small", "t2.medium", "t2.large", "m1.small", "m1.medium", "m1.large", "m1.xlarge", "m2.xlarge", "m2.2xlarge", "m2.4xlarge", "m3.medium", "m3.large", "m3.xlarge", "m3.2xlarge", "m4.large", "m4.xlarge", "m4.2xlarge", "m4.4xlarge", "m4.10xlarge", "c1.medium", "c1.xlarge", "c3.large", "c3.xlarge", "c3.2xlarge", "c3.4xlarge", "c3.8xlarge", "c4.large", "c4.xlarge", "c4.2xlarge", "c4.4xlarge", "c4.8xlarge", "g2.2xlarge", "g2.8xlarge" [...]
            "ConstraintDescription": "must be a valid EC2 instance type."
        },
        "SSHKeyName": {
          "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instances",
          "Type": "AWS::EC2::KeyPair::KeyName",
          "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
        },
        "SSHLocation" : {
            "Description" : "The IP address range that can be used to SSH to the EC2 instances",
            "Type": "String",
            "MinLength": "9",
            "MaxLength": "18",
            "Default": "10.0.0.0/16",
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
          },
        "WebServerCapacity": {
            "Description" : "The initial number of WebServer instances",
            "Type": "Number",
            "MinValue": "2",
            "MaxValue": "5",
            "ConstraintDescription" : "Must be between 2 and 5 EC2 instances."
        }
    },
    
    "Mappings": {
        "AWSInstanceType2Arch": {
            "t1.micro"    : { "Arch": "HVM64"  },
            "t2.nano"     : { "Arch": "HVM64"  },
            "t2.micro"    : { "Arch": "HVM64"  },
            "t2.small"    : { "Arch": "HVM64"  },
            "t2.medium"   : { "Arch": "HVM64"  },
            "t2.large"    : { "Arch": "HVM64"  },
            "m1.small"    : { "Arch": "HVM64"  },
            "m1.medium"   : { "Arch": "HVM64"  },
            "m1.large"    : { "Arch": "HVM64"  },
            "m1.xlarge"   : { "Arch": "HVM64"  },
            "m2.xlarge"   : { "Arch": "HVM64"  },
            "m2.2xlarge"  : { "Arch": "HVM64"  },
            "m2.4xlarge"  : { "Arch": "HVM64"  },
            "m3.medium"   : { "Arch": "HVM64"  },
            "m3.large"    : { "Arch": "HVM64"  },
            "m3.xlarge"   : { "Arch": "HVM64"  },
            "m3.2xlarge"  : { "Arch": "HVM64"  },
            "m4.large"    : { "Arch": "HVM64"  },
            "m4.xlarge"   : { "Arch": "HVM64"  },
            "m4.2xlarge"  : { "Arch": "HVM64"  },
            "m4.4xlarge"  : { "Arch": "HVM64"  },
            "m4.10xlarge" : { "Arch": "HVM64"  },
            "c1.medium"   : { "Arch": "HVM64"  },
            "c1.xlarge"   : { "Arch": "HVM64"  },
            "c3.large"    : { "Arch": "HVM64"  },
            "c3.xlarge"   : { "Arch": "HVM64"  },
            "c3.2xlarge"  : { "Arch": "HVM64"  },
            "c3.4xlarge"  : { "Arch": "HVM64"  },
            "c3.8xlarge"  : { "Arch": "HVM64"  },
            "c4.large"    : { "Arch": "HVM64"  },
            "c4.xlarge"   : { "Arch": "HVM64"  },
            "c4.2xlarge"  : { "Arch": "HVM64"  },
            "c4.4xlarge"  : { "Arch": "HVM64"  },
            "c4.8xlarge"  : { "Arch": "HVM64"  },
            "g2.2xlarge"  : { "Arch": "HVMG2"  },
            "g2.8xlarge"  : { "Arch": "HVMG2"  },
            "r3.large"    : { "Arch": "HVM64"  },
            "r3.xlarge"   : { "Arch": "HVM64"  },
            "r3.2xlarge"  : { "Arch": "HVM64"  },
            "r3.4xlarge"  : { "Arch": "HVM64"  },
            "r3.8xlarge"  : { "Arch": "HVM64"  },
            "i2.xlarge"   : { "Arch": "HVM64"  },
            "i2.2xlarge"  : { "Arch": "HVM64"  },
            "i2.4xlarge"  : { "Arch": "HVM64"  },
            "i2.8xlarge"  : { "Arch": "HVM64"  },
            "d2.xlarge"   : { "Arch": "HVM64"  },
            "d2.2xlarge"  : { "Arch": "HVM64"  },
            "d2.4xlarge"  : { "Arch": "HVM64"  },
            "d2.8xlarge"  : { "Arch": "HVM64"  },
            "hi1.4xlarge" : { "Arch": "HVM64"  },
            "hs1.8xlarge" : { "Arch": "HVM64"  },
            "cr1.8xlarge" : { "Arch": "HVM64"  },
            "cc2.8xlarge" : { "Arch": "HVM64"  }
        },

        "AWSInstanceType2NATArch": {
            "t1.micro"    : { "Arch": "NATHVM64"  },
            "t2.nano"     : { "Arch": "NATHVM64"  },
            "t2.micro"    : { "Arch": "NATHVM64"  },
            "t2.small"    : { "Arch": "NATHVM64"  },
            "t2.medium"   : { "Arch": "NATHVM64"  },
            "t2.large"    : { "Arch": "NATHVM64"  },
            "m1.small"    : { "Arch": "NATHVM64"  },
            "m1.medium"   : { "Arch": "NATHVM64"  },
            "m1.large"    : { "Arch": "NATHVM64"  },
            "m1.xlarge"   : { "Arch": "NATHVM64"  },
            "m2.xlarge"   : { "Arch": "NATHVM64"  },
            "m2.2xlarge"  : { "Arch": "NATHVM64"  },
            "m2.4xlarge"  : { "Arch": "NATHVM64"  },
            "m3.medium"   : { "Arch": "NATHVM64"  },
            "m3.large"    : { "Arch": "NATHVM64"  },
            "m3.xlarge"   : { "Arch": "NATHVM64"  },
            "m3.2xlarge"  : { "Arch": "NATHVM64"  },
            "m4.large"    : { "Arch": "NATHVM64"  },
            "m4.xlarge"   : { "Arch": "NATHVM64"  },
            "m4.2xlarge"  : { "Arch": "NATHVM64"  },
            "m4.4xlarge"  : { "Arch": "NATHVM64"  },
            "m4.10xlarge" : { "Arch": "NATHVM64"  },
            "c1.medium"   : { "Arch": "NATHVM64"  },
            "c1.xlarge"   : { "Arch": "NATHVM64"  },
            "c3.large"    : { "Arch": "NATHVM64"  },
            "c3.xlarge"   : { "Arch": "NATHVM64"  },
            "c3.2xlarge"  : { "Arch": "NATHVM64"  },
            "c3.4xlarge"  : { "Arch": "NATHVM64"  },
            "c3.8xlarge"  : { "Arch": "NATHVM64"  },
            "c4.large"    : { "Arch": "NATHVM64"  },
            "c4.xlarge"   : { "Arch": "NATHVM64"  },
            "c4.2xlarge"  : { "Arch": "NATHVM64"  },
            "c4.4xlarge"  : { "Arch": "NATHVM64"  },
            "c4.8xlarge"  : { "Arch": "NATHVM64"  },
            "g2.2xlarge"  : { "Arch": "NATHVMG2"  },
            "g2.8xlarge"  : { "Arch": "NATHVMG2"  },
            "r3.large"    : { "Arch": "NATHVM64"  },
            "r3.xlarge"   : { "Arch": "NATHVM64"  },
            "r3.2xlarge"  : { "Arch": "NATHVM64"  },
            "r3.4xlarge"  : { "Arch": "NATHVM64"  },
            "r3.8xlarge"  : { "Arch": "NATHVM64"  },
            "i2.xlarge"   : { "Arch": "NATHVM64"  },
            "i2.2xlarge"  : { "Arch": "NATHVM64"  },
            "i2.4xlarge"  : { "Arch": "NATHVM64"  },
            "i2.8xlarge"  : { "Arch": "NATHVM64"  },
            "d2.xlarge"   : { "Arch": "NATHVM64"  },
            "d2.2xlarge"  : { "Arch": "NATHVM64"  },
            "d2.4xlarge"  : { "Arch": "NATHVM64"  },
            "d2.8xlarge"  : { "Arch": "NATHVM64"  },
            "hi1.4xlarge" : { "Arch": "NATHVM64"  },
            "hs1.8xlarge" : { "Arch": "NATHVM64"  },
            "cr1.8xlarge" : { "Arch": "NATHVM64"  },
            "cc2.8xlarge" : { "Arch": "NATHVM64"  }
        },

        "AWSRegionArch2AMI": {
            "us-east-1"        : {"HVM64": "ami-0080e4c5bc078760e", "HVMG2": "ami-0aeb704d503081ea6"},
            "us-west-2"        : {"HVM64": "ami-01e24be29428c15b2", "HVMG2": "ami-0fe84a5b4563d8f27"},
            "us-west-1"        : {"HVM64": "ami-0ec6517f6edbf8044", "HVMG2": "ami-0a7fc72dc0e51aa77"},
            "eu-west-1"        : {"HVM64": "ami-08935252a36e25f85", "HVMG2": "ami-0d5299b1c6112c3c7"},
            "eu-west-2"        : {"HVM64": "ami-01419b804382064e4", "HVMG2": "NOT_SUPPORTED"},
            "eu-west-3"        : {"HVM64": "ami-0dd7e7ed60da8fb83", "HVMG2": "NOT_SUPPORTED"},
            "eu-central-1"     : {"HVM64": "ami-0cfbf4f6db41068ac", "HVMG2": "ami-0aa1822e3eb913a11"},
            "eu-north-1"       : {"HVM64": "ami-86fe70f8", "HVMG2": "ami-32d55b4c"},
            "ap-northeast-1"   : {"HVM64": "ami-00a5245b4816c38e6", "HVMG2": "ami-09d0e0e099ecabba2"},
            "ap-northeast-2"   : {"HVM64": "ami-00dc207f8ba6dc919", "HVMG2": "NOT_SUPPORTED"},
            "ap-northeast-3"   : {"HVM64": "ami-0b65f69a5c11f3522", "HVMG2": "NOT_SUPPORTED"},
            "ap-southeast-1"   : {"HVM64": "ami-05b3bcf7f311194b3", "HVMG2": "ami-0e46ce0d6a87dc979"},
            "ap-southeast-2"   : {"HVM64": "ami-02fd0b06f06d93dfc", "HVMG2": "ami-0c0ab057a101d8ff2"},
            "ap-south-1"       : {"HVM64": "ami-0ad42f4f66f6c1cc9", "HVMG2": "ami-0244c1d42815af84a"},
            "us-east-2"        : {"HVM64": "ami-0cd3dfa4e37921605", "HVMG2": "NOT_SUPPORTED"},
            "ca-central-1"     : {"HVM64": "ami-07423fb63ea0a0930", "HVMG2": "NOT_SUPPORTED"},
            "sa-east-1"        : {"HVM64": "ami-05145e0b28ad8e0b2", "HVMG2": "NOT_SUPPORTED"},
            "cn-north-1"       : {"HVM64": "ami-053617c9d818c1189", "HVMG2": "NOT_SUPPORTED"},
            "cn-northwest-1"   : {"HVM64": "ami-0f7937761741dc640", "HVMG2": "NOT_SUPPORTED"}
          }
    },

    "Resources": {
        "CustomVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "InstanceTenancy": "default"
            }
        },

        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {

            }
        },
   
        "IGAttachment": {
           "Type": "AWS::EC2::VPCGatewayAttachment",
           "Properties": {
             "VpcId": { "Ref": "CustomVPC" },
             "InternetGatewayId": { "Ref": "InternetGateway" }
           }
        },

        "PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
               "VpcId": { "Ref": "CustomVPC" },
               "CidrBlock": "10.0.1.0/24",
               "MapPublicIpOnLaunch": "True",
               "AvailabilityZone": {
                "Fn::Select": [ "0", { "Fn::GetAZs": "" } ]
               }
            }
        },

        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
              "VpcId": { "Ref": "CustomVPC" }
            }
        },
      
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "InternetGateway",
            "Properties": {
              "RouteTableId": { "Ref": "PublicRouteTable" },
              "DestinationCidrBlock": "0.0.0.0/0", 
              "GatewayId": { "Ref": "InternetGateway" }
            }
        },
      
        "PublicSubnetRouteAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
              "RouteTableId": { "Ref": "PublicRouteTable" },
              "SubnetId": { "Ref": "PublicSubnet" }
            }
        },

        "PublicInstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
              "GroupDescription": "Allow HTTP and SSH traffic to our host",
              "VpcId": { "Ref": "CustomVPC" },
              "SecurityGroupIngress": [
                {
                  "IpProtocol": "tcp",
                  "FromPort": "22",
                  "ToPort": "22",
                  "CidrIp" : { "Ref" : "SSHLocation"}
                },
                {
                  "IpProtocol": "tcp",
                  "FromPort": "80",
                  "ToPort": "80",
                  "SourceSecurityGroupId": {"Fn::Select": [0, {"Fn::GetAtt": ["ApplicationLoadBalancer", "SecurityGroups"]}]}
                }
              ],
      
              "SecurityGroupEgress": [
                {
                  "IpProtocol": "tcp",
                  "FromPort": "1",
                  "ToPort": "65535",
                  "CidrIp": "0.0.0.0/0"
                }
              ]
            }
        },
        
        "WebServerGroup": {
            "Type": "AWS::AutoScaling::AutoScalingGroup",
            "Properties": {
              "LaunchConfigurationName": { "Ref": "LaunchConfig" },
              "AvailabilityZones":{
                "Fn::Select": [ "0", { "Fn::GetAZs": "" } ]
              },
              "DesiredCapacity": "3",
              "MinSize": "2",
              "MaxSize": "5",
              "VPCZoneIdentifier": [ {"Ref": "PublicSubnet" } , {"Ref": "PrivateSubnet" } ],
              "TargetGroupARNs": [ { "Ref": "ALBTargetGroup" } ]
            }
        },

        "WebServerScaleUpPolicy": {
          "Type": "AWS::AutoScaling::ScalingPolicy",
          "Properties": {
            "AdjustmentType": "ChangeInCapacity",
            "AutoScalingGroupName": { "Ref": "WebServerGroup" },
            "Cooldown": "60",
            "ScalingAdjustment": "1"
          }
        },

        "WebServerScaleDownPolicy": {
          "Type": "AWS::AutoScaling::ScalingPolicy",
          "Properties": {
            "AdjustmentType": "ChangeInCapacity",
            "AutoScalingGroupName": { "Ref": "WebServerGroup" },
            "Cooldown": "60",
            "ScalingAdjustment": "-1"
          }
        },

        "CPUAlarmHigh": {
          "Type": "AWS::CloudWatch::Alarm",
          "Properties": {
             "AlarmDescription": "Scale-up if CPU > 90% for 10 minutes",
             "MetricName": "CPUUtilization",
             "Namespace": "AWS/EC2",
             "Statistic": "Average",
             "Period": "300",
             "EvaluationPeriods": "2",
             "Threshold": "90",
             "AlarmActions": [ { "Ref": "WebServerScaleUpPolicy" } ],
             "Dimensions": [
               {
                 "Name": "AutoScalingGroupName",
                 "Value": { "Ref": "WebServerGroup" }
               }
             ],
             "ComparisonOperator": "GreaterThanThreshold"
          }
        },

        "CPUAlarmLow": {
          "Type": "AWS::CloudWatch::Alarm",
          "Properties": {
             "AlarmDescription": "Scale-down if CPU < 70% for 10 minutes",
             "MetricName": "CPUUtilization",
             "Namespace": "AWS/EC2",
             "Statistic": "Average",
             "Period": "300",
             "EvaluationPeriods": "2",
             "Threshold": "70",
             "AlarmActions": [ { "Ref": "WebServerScaleDownPolicy" } ],
             "Dimensions": [
               {
                 "Name": "AutoScalingGroupName",
                 "Value": { "Ref": "WebServerGroup" }
               }
             ],
             "ComparisonOperator": "LessThanThreshold"
          }
        },

        "LaunchConfig": {
            "Type": "AWS::AutoScaling::LaunchConfiguration",
            "Properties": {
              "ImageId" : { "Fn::FindInMap": [ "AWSRegionArch2AMI", { "Ref": "AWS::Region" },
                          { "Fn::FindInMap": [ "AWSInstanceType2Arch", { "Ref": "InstanceType" }, "Arch" ] } ] },
              "InstanceType"   : { "Ref": "InstanceType" },
              "SecurityGroups" : [ {"Ref": "PublicInstanceSecurityGroup" } , {"Ref": "PrivateInstanceSecurityGroup" } ],
              "KeyName"        : { "Ref": "SSHKeyName" },
              "UserData": {
                "Fn::Base64": {
                  "Fn::Join": [
                    "\n",
                    [
                      "#!/bin/bash -xe",
                      "sudo yum update -y",
                      "sudo yum install httpd -y",
                      "sudo /etc/init.d/httpd start",
                      "echo \"<html><body><h1>Hello World!</h1>\" > /var/www/html/index.html",
                      "echo \"</body></html>\" >> /var/www/html/index.html"
                    ]
                  ]
                }
              }
            }
        },

        "NAT": {
            "Type": "AWS::EC2::NatGateway",
            "DependsOn": "EIP",
            "Properties": {
               "AllocationId": { "Fn::GetAtt": ["EIP", "AllocationId"]},
               "SubnetId": { "Ref": "PublicSubnet"}
              }
        },

        "EIP": {
            "DependsOn": "IGAttachment",
            "Type": "AWS::EC2::EIP",
            "Properties": {
               "Domain": "vpc"
            }
         },
        
        "PrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
               "VpcId": { "Ref": "CustomVPC" },
               "CidrBlock": "10.0.2.0/24",
               "AvailabilityZone": {
                "Fn::Select": [ "1", { "Fn::GetAZs": "" } ]
               }
               
            }
        },

        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
              "VpcId": { "Ref": "CustomVPC" }
            }
        },

        "PrivateRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
              "RouteTableId": { "Ref": "PrivateRouteTable" },
              "DestinationCidrBlock": "0.0.0.0/0", 
              "NatGatewayId": { "Ref": "NAT" }
            }
        },
      
        "PrivateSubnetRouteAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
              "RouteTableId": { "Ref": "PrivateRouteTable" },
              "SubnetId": { "Ref": "PrivateSubnet" }
            }
        },

        "PrivateInstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
              "GroupDescription": "Allow HTTP and SSH traffic to our host",
              "VpcId": { "Ref": "CustomVPC" },
              "SecurityGroupIngress": [
                {
                  "IpProtocol": "tcp",
                  "FromPort": "22",
                  "ToPort": "22",
                  "CidrIp": { "Ref": "SSHLocation" }
                }
              ],
      
              "SecurityGroupEgress": [
                {
                  "IpProtocol": "tcp",
                  "FromPort": "1",
                  "ToPort": "65535",
                  "CidrIp": "0.0.0.0/0"
                }
              ]
            }
        },

        "ApplicationLoadBalancer": {
            "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
            "Properties": {
                "Subnets": [ { "Ref": "PublicSubnet"} , { "Ref": "PrivateSubnet"} ]
            }
        },

        "ALBListener": {
            "Type": "AWS::ElasticLoadBalancingV2::Listener",
            "Properties": {
              "DefaultActions": [{
                "Type": "forward",
                "TargetGroupArn": { "Ref": "ALBTargetGroup" }
              }],
              "LoadBalancerArn": { "Ref": "ApplicationLoadBalancer" },
              "Port": "80",
              "Protocol": "HTTP"
            }
        },

        "ALBTargetGroup": {
            "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
            "Properties": {
              "HealthCheckPath": "/var/www/html/index.html",  
              "HealthCheckIntervalSeconds": 10,
              "HealthCheckTimeoutSeconds": 5,
              "HealthyThresholdCount": 2,
              "Port": 80,
              "Protocol": "HTTP",
              "UnhealthyThresholdCount": 5,
              "VpcId": {"Ref": "CustomVPC"}      
            }
        }
    },

    "Outputs": {
        "URL": {
          "Description": "URL of the website",
          "Value": { "Fn::Join": [ "", [ "http://", { "Fn::GetAtt": [ "ApplicationLoadBalancer", "DNSName" ] } ] ] }
        }
    }
}
